Fix z-index issues

--- a/apps/mobile/src/components/BottomCard/BottomCard.css
+++ b/apps/mobile/src/components/BottomCard/BottomCard.css
@@ -11,4 +11,6 @@
 
   border: solid 4px #faf1e9;
   border-bottom: none;
+
+  z-index: var(--z-index-modal);
 }
