--- a/apps/mobile/src/components/Navbar/Navbar.css
+++ b/apps/mobile/src/components/Navbar/Navbar.css
@@ -1,4 +1,5 @@
 .Navbar {
+  z-index: var(--z-index-navigation);
   position: absolute;
   display: flex;
   justify-content: space-between;
@@ -21,6 +22,7 @@
   font-size: var(--step--1);
   gap: var(--space-3xs);
   color: var(--color-gray);
+  -webkit-tap-highlight-color: transparent;
 }
 
 .Navbar__Item--Active {
